alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ top: 291px;
 
 
 #portcontent{
-	width: 1100px;			/* Set to slidorion width. Is equal to #slider + #accordion width */
+	width: 100%;			/* Set to slidorion width. Is equal to #slider + #accordion width */
 	height: 690px;			/* Set to slidorion height. Is equal to #slider and #accordion height */
 	position: relative;
 }
@@ -164,8 +164,9 @@ font-size: 20px;
 float: left;
 text-align: right;
 font-size: 36px;
-margin-top: 200px;
-margin-left: 70px;
+top: 200px;
+right: 70px;
+position:absolute;
 }
 
 #externalNav .headline {
